--- a/bin/interfazPrincipal/estilo.css
+++ b/bin/interfazPrincipal/estilo.css
@@ -1,16 +1,9 @@
 .jfx-hamburger StackPane{
-	-fx-background-color:  white;
+	-fx-background-color:  #1976D2;
 }
 
 #hbox-logotipo{
 	-fx-background-radius: 0px 4px 4px 0px;
-}
-
-#barraDeBusqueda{
-	-fx-background-color: #F5F5F5;
-	-fx-prompt-text-fill: #727272;
-	-fx-background-radius: 7px;
-	-fx-text-fill: #616161
 }
 
 #jfx-button-bar{
