--- a/src/interfazPrincipal/InterfazPrincipal.fxml
+++ b/src/interfazPrincipal/InterfazPrincipal.fxml
@@ -3,23 +3,22 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXDrawer?>
 <?import com.jfoenix.controls.JFXHamburger?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
-<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <BorderPane prefHeight="700.0" prefWidth="1300.0" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazPrincipal.ControladorInterfazPrincipal">
    <top>
-      <HBox prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="45.0" prefWidth="1300.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #f44336;">
+            <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: white;">
                <children>
                   <JFXHamburger fx:id="hamburger" prefHeight="40.0" prefWidth="30.0">
                      <HBox.margin>
@@ -29,7 +28,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </JFXHamburger>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: QuickSand; -fx-font-weight: bold; -fx-font-size: 1.4em;" text="Bienvenido" textAlignment="CENTER">
+                  <Text fill="#1976d2" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: QuickSand; -fx-font-weight: bold; -fx-font-size: 1.4em;" text="Bienvenido" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -39,53 +38,97 @@
                   </Text>
                </children>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
+            <HBox prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
                <children>
-                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="940.0" HBox.hgrow="ALWAYS">
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <JFXTextField id="barraDeBusqueda" focusColor="#ffffff00" prefHeight="34.0" prefWidth="451.0" promptText="Buscar venta..." unFocusColor="#ffffff00">
+                        <Pane prefHeight="60.0" prefWidth="250.0" style="-fx-background-color: white; -fx-background-radius: 5;">
+                           <children>
+                              <Text fill="#4d4d4d" layoutX="9.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL VENTAS">
+                                 <font>
+                                    <Font name="Quicksand-Bold" size="16.0" />
+                                 </font>
+                              </Text>
+                              <HBox alignment="CENTER" layoutX="146.0" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: #eeeeee;" styleClass="segunda-seccion">
+                                 <children>
+                                    <Text fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
+                                       <font>
+                                          <Font name="Quicksand-Bold" size="24.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </HBox>
+                           </children>
                            <HBox.margin>
-                              <Insets />
+                              <Insets bottom="10.0" right="20.0" top="10.0" />
                            </HBox.margin>
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <padding>
-                              <Insets left="15.0" right="35.0" />
-                           </padding>
-                           <font>
-                              <Font name="Quicksand-BoldItalic" size="12.0" />
-                           </font>
-                        </JFXTextField>
-                        <JFXButton contentDisplay="GRAPHIC_ONLY" prefHeight="32.0" prefWidth="24.0" ripplerFill="#f4433600">
-                           <graphic>
-                              <MaterialIconView fill="#727272" glyphName="SEARCH" size="2em">
-                                 <cursor>
-                                    <Cursor fx:constant="HAND" />
-                                 </cursor>
-                              </MaterialIconView>
-                           </graphic>
+                           <effect>
+                              <DropShadow color="#bbbbbb" height="10.0" radius="4.5" width="10.0" />
+                           </effect>
+                        </Pane>
+                        <Pane prefHeight="90.0" prefWidth="250.0" style="-fx-background-color: white; -fx-background-radius: 5;">
+                           <children>
+                              <Text fill="#4d4d4d" layoutX="12.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL DINERO">
+                                 <font>
+                                    <Font name="Quicksand-Bold" size="16.0" />
+                                 </font>
+                              </Text>
+                              <HBox alignment="CENTER" layoutX="144.0" prefHeight="40.0" prefWidth="108.0" style="-fx-background-color: #eeeeee;" styleClass="segunda-seccion">
+                                 <children>
+                                    <Text fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="\$">
+                                       <font>
+                                          <Font name="Quicksand-Bold" size="24.0" />
+                                       </font>
+                                    </Text>
+                                    <Text fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
+                                       <font>
+                                          <Font name="Quicksand-Bold" size="24.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </HBox>
+                           </children>
                            <HBox.margin>
-                              <Insets left="-35.0" />
+                              <Insets bottom="10.0" right="20.0" top="10.0" />
                            </HBox.margin>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                           <padding>
-                              <Insets left="5.0" right="5.0" />
-                           </padding>
-                        </JFXButton>
+                           <effect>
+                              <DropShadow color="#bbbbbb" height="10.0" radius="4.5" width="10.0" />
+                           </effect>
+                        </Pane>
+                        <Pane prefHeight="90.0" prefWidth="250.0" style="-fx-background-color: white; -fx-background-radius: 5;">
+                           <children>
+                              <Text fill="#4d4d4d" layoutX="5.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL GANANCIA">
+                                 <font>
+                                    <Font name="Quicksand-Bold" size="15.0" />
+                                 </font>
+                              </Text>
+                              <HBox alignment="CENTER" layoutX="144.0" prefHeight="40.0" prefWidth="108.0" style="-fx-background-color: #eeeeee;" styleClass="segunda-seccion">
+                                 <children>
+                                    <Text fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="\$">
+                                       <font>
+                                          <Font name="Quicksand-Bold" size="24.0" />
+                                       </font>
+                                    </Text>
+                                    <Text fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
+                                       <font>
+                                          <Font name="Quicksand-Bold" size="24.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </HBox>
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="10.0" top="10.0" />
+                           </HBox.margin>
+                           <effect>
+                              <DropShadow color="#bbbbbb" height="10.0" radius="4.5" width="10.0" />
+                           </effect>
+                        </Pane>
                      </children>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="106.0">
+                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="45.0">
                      <children>
-                        <JFXButton id="jfx-button-bar" alignment="CENTER" contentDisplay="GRAPHIC_ONLY" prefHeight="60.0" prefWidth="49.0" ripplerFill="#a4a4a4">
+                        <JFXButton id="jfx-button-bar" alignment="CENTER" contentDisplay="GRAPHIC_ONLY" prefHeight="45.0" prefWidth="49.0" ripplerFill="#a4a4a4">
                            <graphic>
                               <FontAwesomeIconView fill="#727272" glyphName="COG" size="2em" />
                            </graphic>
@@ -104,10 +147,10 @@
                         <Insets bottom="7.0" top="7.0" />
                      </padding>
                   </HBox>
-                  <HBox alignment="CENTER_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="60.0" prefWidth="155.0">
+                  <HBox alignment="CENTER_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="45.0" prefWidth="153.0">
                      <children>
                         <MaterialDesignIconView fill="#727272" glyphName="ACCOUNT" size="2em" />
-                        <Text fill="#f44336" strokeType="OUTSIDE" strokeWidth="0.0" text="Alfa y Omega" textAlignment="CENTER">
+                        <Text fill="#4d4d4d" strokeType="OUTSIDE" strokeWidth="0.0" text="Alfa y Omega" textAlignment="CENTER">
                            <font>
                               <Font name="Quicksand-Bold" size="16.0" />
                            </font>
