--- a/src/interfazPrincipal/menuLateral/estilo.css
+++ b/src/interfazPrincipal/menuLateral/estilo.css
@@ -1,5 +1,5 @@
 .hover-border:hover{
-	-fx-border-color: #f44336;
+	-fx-border-color: #1565C0;
 	-fx-border-width: 0px 0px 0px 3px;
 	-fx-background-color: #E0E0E0;
 	-fx-cursor:hand;
