--- a/src/seccionVentas/InterfazVentas.fxml
+++ b/src/seccionVentas/InterfazVentas.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
+<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.TreeTableColumn?>
@@ -10,120 +11,98 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="650.0" prefWidth="1300.0" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="700.0" prefWidth="1300.0" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <HBox alignment="CENTER" prefHeight="90.0" prefWidth="1090.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER_LEFT" prefHeight="90.0" prefWidth="1090.0" styleClass="hbox-barra-herramientas" BorderPane.alignment="CENTER">
          <children>
-            <Pane prefHeight="90.0" prefWidth="250.0" style="-fx-background-color: white; -fx-background-radius: 5;">
+            <Text fill="#646363" strokeType="OUTSIDE" strokeWidth="0.0" text="Lista de ventas" textAlignment="CENTER">
+               <font>
+                  <Font name="Quicksand-Bold" size="30.0" />
+               </font>
+            </Text>
+            <HBox alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="940.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Text fill="#f44336" layoutX="11.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL VENTAS">
+                  <JFXTextField id="barraDeBusqueda" focusColor="#ffffff00" prefHeight="34.0" prefWidth="451.0" promptText="Buscar venta..." unFocusColor="#ffffff00">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets left="15.0" right="35.0" />
+                     </padding>
                      <font>
-                        <Font name="Quicksand-Bold" size="16.0" />
+                        <Font name="Quicksand-BoldItalic" size="13.0" />
                      </font>
-                  </Text>
-                  <HBox alignment="CENTER" layoutX="144.0" prefHeight="90.0" prefWidth="108.0" style="-fx-background-color: #eeeeee;" styleClass="segunda-seccion">
-                     <children>
-                        <Text fill="#f44336" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
-                           <font>
-                              <Font name="Quicksand-Bold" size="24.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </HBox>
+                  </JFXTextField>
+                  <JFXButton contentDisplay="GRAPHIC_ONLY" prefHeight="32.0" prefWidth="24.0" ripplerFill="#1976d200">
+                     <graphic>
+                        <MaterialIconView fill="#727272" glyphName="SEARCH" size="2em">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </MaterialIconView>
+                     </graphic>
+                     <HBox.margin>
+                        <Insets left="-35.0" />
+                     </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <padding>
+                        <Insets left="5.0" right="5.0" />
+                     </padding>
+                  </JFXButton>
+                  <JFXButton disable="true" prefHeight="32.0" prefWidth="100.0" style="-fx-font-family: quicksand; -fx-font-weight: bolder; -fx-background-color: #1976D2; -fx-background-radius: 0; -fx-text-fill: white;" text="Ver Detalles">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
                </children>
-               <effect>
-                  <DropShadow color="#bbbbbb" height="48.55" radius="23.775" width="48.55" />
-               </effect>
-               <HBox.margin>
-                  <Insets right="40.0" />
-               </HBox.margin>
-            </Pane>
-            <Pane prefHeight="90.0" prefWidth="250.0" style="-fx-background-color: white; -fx-background-radius: 5;">
-               <children>
-                  <Text fill="#f44336" layoutX="11.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL DINERO">
-                     <font>
-                        <Font name="Quicksand-Bold" size="16.0" />
-                     </font>
-                  </Text>
-                  <HBox alignment="CENTER" layoutX="144.0" prefHeight="90.0" prefWidth="108.0" style="-fx-background-color: #eeeeee;" styleClass="segunda-seccion">
-                     <children>
-                        <Text fill="#f44336" strokeType="OUTSIDE" strokeWidth="0.0" text="\$">
-                           <font>
-                              <Font name="Quicksand-Bold" size="24.0" />
-                           </font>
-                        </Text>
-                        <Text fill="#f44336" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
-                           <font>
-                              <Font name="Quicksand-Bold" size="24.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </HBox>
-               </children>
-               <effect>
-                  <DropShadow color="#bbbbbb" height="48.55" radius="23.775" width="48.55" />
-               </effect>
-            </Pane>
-            <Pane prefHeight="90.0" prefWidth="250.0" style="-fx-background-color: white; -fx-background-radius: 5;">
-               <children>
-                  <Text fill="#f44336" layoutX="5.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL GANANCIA">
-                     <font>
-                        <Font name="Quicksand-Bold" size="15.0" />
-                     </font>
-                  </Text>
-                  <HBox alignment="CENTER" layoutX="144.0" prefHeight="90.0" prefWidth="108.0" style="-fx-background-color: #eeeeee;" styleClass="segunda-seccion">
-                     <children>
-                        <Text fill="#f44336" strokeType="OUTSIDE" strokeWidth="0.0" text="\$">
-                           <font>
-                              <Font name="Quicksand-Bold" size="24.0" />
-                           </font>
-                        </Text>
-                        <Text fill="#f44336" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
-                           <font>
-                              <Font name="Quicksand-Bold" size="24.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </HBox>
-               </children>
-               <effect>
-                  <DropShadow color="#bbbbbb" height="48.55" radius="23.775" width="48.55" />
-               </effect>
-               <HBox.margin>
-                  <Insets left="40.0" />
-               </HBox.margin>
-            </Pane>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets right="8.0" />
+               </padding>
+            </HBox>
          </children>
          <BorderPane.margin>
-            <Insets top="40.0" />
+            <Insets left="8.0" right="8.0" top="40.0" />
          </BorderPane.margin>
       </HBox>
    </top>
    <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" />
+      <Insets bottom="10.0" left="10.0" right="10.0" />
    </padding>
    <center>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox alignment="CENTER" maxHeight="467.0" prefHeight="467.0" prefWidth="382.0" style="-fx-background-color: white; -fx-background-radius: 5;">
+            <VBox alignment="CENTER" maxHeight="512.0" prefHeight="512.0" prefWidth="382.0" style="-fx-background-color: white; -fx-background-radius: 5;">
                <HBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="40.0" />
                </HBox.margin>
                <effect>
-                  <DropShadow color="#bbbbbb" height="48.55" radius="23.775" width="48.55" />
+                  <DropShadow color="#bbbbbb" height="10.0" radius="4.5" width="10.0" />
                </effect>
                <children>
                   <Text fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="NUEVA VENTA">
                      <font>
                         <Font name="Quicksand-Bold" size="18.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets bottom="30.0" />
+                     </VBox.margin>
                   </Text>
-                  <JFXTextField id="jfx-text-field" focusColor="#f44336" labelFloat="true" prefWidth="323.0" promptText="Articulo vendido" unFocusColor="#d7d7d7">
+                  <JFXTextField id="jfx-text-field" focusColor="#1976d2" labelFloat="true" prefWidth="323.0" promptText="Articulo vendido" unFocusColor="#d7d7d7">
                      <VBox.margin>
                         <Insets bottom="15.0" left="33.0" right="32.0" top="15.0" />
                      </VBox.margin>
@@ -131,7 +110,7 @@
                         <Font name="Quicksand-Bold" size="15.0" />
                      </font>
                   </JFXTextField>
-                  <JFXTextField id="jfx-text-field" focusColor="#f44336" labelFloat="true" prefWidth="323.0" promptText="Talle" unFocusColor="#d7d7d7">
+                  <JFXTextField id="jfx-text-field" focusColor="#1976d2" labelFloat="true" prefWidth="323.0" promptText="Talle" unFocusColor="#d7d7d7">
                      <font>
                         <Font name="Quicksand-Bold" size="15.0" />
                      </font>
@@ -139,7 +118,7 @@
                         <Insets bottom="15.0" left="33.0" right="32.0" top="15.0" />
                      </VBox.margin>
                   </JFXTextField>
-                  <JFXTextField id="jfx-text-field" focusColor="#f44336" labelFloat="true" prefWidth="323.0" promptText="Precio" unFocusColor="#d7d7d7">
+                  <JFXTextField id="jfx-text-field" focusColor="#1976d2" labelFloat="true" prefWidth="323.0" promptText="Precio" unFocusColor="#d7d7d7">
                      <font>
                         <Font name="Quicksand-Bold" size="15.0" />
                      </font>
@@ -147,7 +126,7 @@
                         <Insets bottom="15.0" left="33.0" right="32.0" top="15.0" />
                      </VBox.margin>
                   </JFXTextField>
-                  <JFXButton buttonType="RAISED" defaultButton="true" prefHeight="39.0" prefWidth="318.0" style="-fx-background-color: #f44336;" text="AGREGAR VENTA" textFill="WHITE">
+                  <JFXButton buttonType="RAISED" defaultButton="true" prefHeight="39.0" prefWidth="318.0" style="-fx-background-color: #1976D2;" text="AGREGAR VENTA" textFill="WHITE">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -158,11 +137,22 @@
                         <Insets top="15.0" />
                      </VBox.margin>
                   </JFXButton>
+                  <JFXButton defaultButton="true" disable="true" prefHeight="39.0" prefWidth="318.0" ripplerFill="#002f5b" styleClass="boton-eliminar" text="ELIMINAR VENTA" textFill="#1976d2">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <font>
+                        <Font name="Calibri Bold" size="17.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXButton>
                </children>
             </VBox>
             <JFXTreeTableView HBox.hgrow="ALWAYS">
                <effect>
-                  <DropShadow color="#bbbbbb" height="48.55" radius="23.775" spread="0.23" width="48.55" />
+                  <DropShadow color="#bbbbbb" height="10.0" radius="4.5" spread="0.23" width="10.0" />
                </effect>
                <columns>
                   <TreeTableColumn minWidth="326.0" prefWidth="326.0" text="Articulo" />
@@ -179,17 +169,4 @@
          </children>
       </HBox>
    </center>
-   <bottom>
-      <JFXButton buttonType="RAISED" contentDisplay="CENTER" disable="true" style="-fx-background-color: white; -fx-border-width: 1; -fx-border-color: #EEEEEE; -fx-border-radius: 5; -fx-background-radius: 5;" text="Eliminar venta" textFill="#727272" BorderPane.alignment="CENTER_RIGHT">
-         <BorderPane.margin>
-            <Insets bottom="5.0" right="15.0" />
-         </BorderPane.margin>
-         <font>
-            <Font name="Calibri Bold" size="13.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </JFXButton>
-   </bottom>
 </BorderPane>
