--- a/bin/interfazPrincipal/menuLateral/MenuLateral.fxml
+++ b/bin/interfazPrincipal/menuLateral/MenuLateral.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="200.0" style="-fx-background-color: white;" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="200.0" style="-fx-background-color: white;" stylesheets="@estilo.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazPrincipal.menuLateral.ControladorMenuLateral">
    <children>
       <HBox alignment="CENTER_LEFT" styleClass="hover-border">
          <children>
-            <JFXButton alignment="BASELINE_LEFT" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="VENTAS" textFill="#485460" HBox.hgrow="ALWAYS">
+            <JFXButton fx:id="botonVentas" alignment="BASELINE_LEFT" onAction="#clickVentas" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="VENTAS" textFill="#485460" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="Quicksand-Bold" size="14.0" />
                </font>
@@ -32,7 +32,7 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" styleClass="hover-border">
          <children>
-            <JFXButton alignment="BASELINE_LEFT" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="STOCK" textFill="#485460" HBox.hgrow="ALWAYS">
+            <JFXButton fx:id="botonStock" alignment="BASELINE_LEFT" onAction="#clickStock" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="STOCK" textFill="#485460" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="Quicksand-Bold" size="14.0" />
                </font>
@@ -50,7 +50,7 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" styleClass="hover-border">
          <children>
-            <JFXButton alignment="BASELINE_LEFT" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="CALCULOS" textFill="#485460" HBox.hgrow="ALWAYS">
+            <JFXButton fx:id="botonCalculos" alignment="BASELINE_LEFT" onAction="#clickCalculos" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="CALCULOS" textFill="#485460" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="Quicksand-Bold" size="14.0" />
                </font>
@@ -68,7 +68,7 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" styleClass="hover-border">
          <children>
-            <JFXButton alignment="BASELINE_LEFT" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="ESTADISTICAS" textFill="#485460" HBox.hgrow="ALWAYS">
+            <JFXButton fx:id="botonEstadisticas" alignment="BASELINE_LEFT" onAction="#clickEstadisticas" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="ESTADISTICAS" textFill="#485460" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="Quicksand-Bold" size="14.0" />
                </font>
@@ -88,7 +88,7 @@
          <children>
             <HBox alignment="CENTER_LEFT" styleClass="hover-border">
                <children>
-                  <JFXButton alignment="BASELINE_LEFT" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="CONFIGURACION" textFill="#485460" HBox.hgrow="ALWAYS">
+                  <JFXButton fx:id="botonConfiguracion" alignment="BASELINE_LEFT" onAction="#clickConfiguracion" prefHeight="42.0" prefWidth="201.0" ripplerFill="#a4a4a4" text="CONFIGURACION" textFill="#485460" HBox.hgrow="ALWAYS">
                      <graphic>
                         <FontAwesomeIconView fill="#2196f3" glyphName="COG" size="1.8em" wrappingWidth="24.514286041259766" />
                      </graphic>
